# msp430-dev-base

./: .gitignore  .gitmodules  README.md  docker-compose.yml  meson.build  mock_config.yml  msp430.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: build.yml
include/: delay.h  leds.h  meson.build
src/: blink_bin.c  delay.c  leds.c  meson.build
test/: meson.build  test_delay.c  test_delay2.c  test_leds.c
